[tool.poetry]
name = "bstk-pyrontree"
version = "0.0.1"
description = "Tree "
authors = ["colin <colin@broadstack.com.au>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyrontree" }]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = { version = "^4.5.0", markers = "python_version < '3.10'" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = { version = "^6.0.0", markers = "python_version >= '3.8.1'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"